--- a/src/main/resources/bookface-config.properties
+++ b/src/main/resources/bookface-config.properties
@@ -1,8 +1,7 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/bookface
-database.username=root
-database.password=*******
 
-#Url del ldap
-ldap.url=ldap://localhost:10389/o=bookface
-ldap.password=******
+# database properties
+database.url=jdbc:mysql://sql3.freemysqlhosting.net:3306/sql373894
+database.username=sql373894
+database.password=qC7%vQ9*
+hibernate.default_catalog=sql373894
